--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ html {
 }
 
 :root {
-    --color1: #343C46;
+    --color1: #343c46;
     --color2: #505b67;
-    --color3: #65737ea2;
+    --color3: #65737e;
     --color4: #a7adbb;
     --color5: #c0c5ce;
-    --color6: white; 
+    --color6: rgb(255, 255, 255); 
 
 }
 
@@ -29,7 +29,7 @@ body {
 nav {
     width: 100%;
     height: 40px;
-    border-bottom: 2px solid var(--color3);
+    border-bottom: 2px solid var(--color4);
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -40,6 +40,7 @@ nav {
     position: fixed;
     background-color: var(--color5);
     z-index: 1;
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav div {
@@ -49,15 +50,44 @@ nav div {
 nav a {
     color: var(--color1);
     text-decoration:none;
+    font-size: 1.5rem;
+    margin-left: 15px;
+    border: 1px solid var(--color5);
+    padding: 5px;
+    border-radius: 50%;
+}
+
+nav a:hover {
+
+    background-color: #ced4df;
+    color: var(--color2);
+}
+
+.sfcc {
+    font-size: 1.2rem;
+    color: var(--color1);
+}
+
+.menuButton {
+    color: var(--color1);
+    font-size: 1.5rem;
+    border: 1px solid var(--color5);
+    padding: 5px;
+    border-radius: 25px;
+}
+
+.menuButton:hover {
+    background-color: #ced4df;
+    color: var(--color2);
 }
 
 .menuContainer {
     position:absolute;
-    background-color: var(--color5);
+    background-color: #cacedabb;
     z-index: 1;
     top:38px;
     width: 35%;
-    border: 2px solid var(--color3);
+    border: 2px solid var(--color4);
     border-radius: 5px;
     font-size: 1.5rem;
     padding-left: 15px;
@@ -73,6 +103,10 @@ nav a {
     font-weight: bold;
     color: var(--color1);
     text-decoration: none;
+}
+
+.menuContainer a:hover {
+    color: var(--color3);
 }
 
 .mainScreen {
@@ -111,6 +145,7 @@ h3 {
     background-color: var(--color4);
     margin: 20px;
     padding: 20px;
+    border-radius: 5px;
 }
 
 .containerCivilEngineering {
@@ -119,6 +154,7 @@ h3 {
     background-color: var(--color2);
     margin: 20px;
     padding: 20px;
+    border-radius: 5px;
 
 }
 
