--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ nav a:hover {
 .sfcc {
     font-size: 1.2rem;
     color: var(--color1);
+    cursor:crosshair;
 }
 
 .menuButton {
@@ -161,42 +162,37 @@ h3 {
 
 
 .containerArchitecture > div {
-    display: grid;
-    grid-template-rows: 80% 20% ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     padding: 25px;
-    margin:5px 0px
+    margin:5px 0px;
+    border-bottom: 3px solid var(--color4);
 }
+
 
 .containerCivilEngineering > div {
-    display: grid;
-    grid-template-rows: 80% 20% ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     padding: 25px;
-    margin:5px 0px
+    margin:5px 0px;
+    border-bottom: 3px solid var(--color2);
 }
 
-
-.containerArchitecture a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.containerCivilEngineering a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.projectName {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--color6);
+    margin-top: 6px;
+    font-size: 1.2rem;
+    text-align: center;
 }
 
 img:hover {
     transform:scale(1.05);
-}
-
-.containerArchitecture > div {
-    border-bottom: 3px solid var(--color4);
-}
-
-.containerCivilEngineering > div {
-    border-bottom: 3px solid var(--color2);
+    cursor: pointer;
 }
 
 .containerArchitecture img {
@@ -220,4 +216,64 @@ img:hover {
     border:4px solid var(--color5);
     background-color: var(--color5);
     border-radius: 5px;
+}
+
+.projectContainer {
+    position: absolute;
+    background-color: var(--color5);
+    width: 80%;
+    height: 80%;
+    border-radius: 15px;
+    top:12.5%;
+    left: 10%;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 20px;
+    z-index: 2;
+    position: fixed;
+
+}
+
+.projectContainer > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.projectContainer img {
+    border:4px solid var(--color5);
+    border-radius: 15px;
+}
+
+.projectContainer img:hover {
+    border:4px solid var(--color4);
+    background-color: var(--color4);
+    border-radius: 5px;
+}
+
+
+
+.close {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2rem;
+    position: absolute;
+    background-color: var(--color4);
+    padding: 5px;
+    padding-bottom: 8px;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top:15px;
+    right: 15px;
+    color: rgba(255, 255, 255, 0.788);
+}
+
+.close:hover {
+    cursor: pointer;
+    color: var(--color6);
+    background-color: #b6bac2;
 }
