--- a/styles.css
+++ b/styles.css
@@ -234,16 +234,17 @@ img:hover {
 
 }
 
-.projectContainer > div {
+.projectContainer  .projectDiv {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .projectContainer img {
     border:4px solid var(--color5);
     border-radius: 15px;
+    width: 75%;
 }
 
 .projectContainer img:hover {
