--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ html {
     --color4: #a7adbb;
     --color5: #c0c5ce;
     --color6: rgb(255, 255, 255); 
+    --color7: rgb(33, 71, 77);
 
 }
 
@@ -160,6 +161,16 @@ h3 {
 
 }
 
+.containerRenders {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: var(--color7);
+    margin: 20px;
+    padding: 20px;
+    border-radius: 5px;
+
+}
+
 
 .containerArchitecture > div {
     display: flex;
@@ -180,6 +191,16 @@ h3 {
     padding: 25px;
     margin:5px 0px;
     border-bottom: 3px solid var(--color2);
+}
+
+.containerRenders > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 25px;
+    margin:5px 0px;
+    border-bottom: 3px solid var(--color7);
 }
 
 .projectName {
@@ -215,6 +236,17 @@ img:hover {
 .containerCivilEngineering img:hover {
     border:4px solid var(--color5);
     background-color: var(--color5);
+    border-radius: 5px;
+}
+
+.containerRenders img {
+    border:4px solid var(--color7);
+    border-radius: 15px;
+}
+
+.containerRenders img:hover {
+    border:4px solid var(--color1);
+    background-color: var(--color1);
     border-radius: 5px;
 }
 
