Ver. 2.0 Muros.io

--- a/styles.css
+++ b/styles.css
@@ -318,16 +318,17 @@ img:hover {
     position: absolute;
     position: fixed;
     top:92.5%;
-    left: 91.5%;
+    left: 80%;
     background-color: var(--color6);
     border: 2px solid var(--color7);
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1rem;
     padding: 5px;
     font-weight: bold;
     border-radius: 15px;
     color: var(--color1);
     text-decoration: none;
+    z-index: 2;
 }
 
 #murosApp:hover {
